# rest

./: .gitmodules  CMakeLists.txt  README.md
Rest/: CMakeLists.txt  client.cpp  client.h  datatype.cpp  datatype.h  problemdetails.cpp  problemdetails.h  server.cpp  server.h  utils.cpp  utils.h
Test/: CMakeLists.txt  testmain.cpp  testrest.cpp
jenkins/: cppcheck.sh
